# Neura-Rig

./: .gitattributes  .gitignore  CMakeLists.txt  ClangFormat.sh  LICENSE  README.md
Source/: CMakeLists.txt
Source/Private/Core/: Parse.cpp
Source/Private/NRCore/: NRParse.cpp
Source/Private/NRNetwork/: NRNetwork.cpp  NRNetworkClient.cpp  NRNetworkServer.cpp
Source/Private/NRSolver/: NRSolver.cpp
Source/Private/NRTrainee/: NRTrainee.cpp
Source/Private/Network/: NetworkClient.cpp  NetworkServer.cpp
Source/Private/Solver/: Solver.cpp
Source/Private/Trainee/: Trainee.cpp
Source/Public/Core/: Parse.h  Rules.h  Types.h
Source/Public/Interfaces/: IModel.h  IQuat.h
Source/Public/NRCore/: NRConcepts.h  NRCore.h  NRParse.h  NRRules.h  NRTypes.h
Source/Public/NRInterfaces/: INRModel.h
Source/Public/NRNetwork/: NRNetwork.h  NRNetworkClient.h  NRNetworkServer.h
Source/Public/NRSolver/: NRSolver.h
Source/Public/NRTrainee/: NRTrainee.h
Source/Public/Network/: NetworkClient.h  NetworkServer.h
Source/Public/Solver/: Solver.h
Source/Public/Trainee/: Trainee.h
Tests/: CMakeLists.txt
Tests/Datasets/: Foot_IK.json  Foot_SK.json  Foot_TW.json  Rest_Pose_IK.json  trained_model.pt
Tests/Integration/: Rules.cpp  Server.cpp  TestNewNetwork.cpp  TestTrainerMachine.cpp  Trainee.cpp
